@@ -1,17 +1,16 @@
 import static org.junit.jupiter.api.Assertions.*;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import org.junit.jupiter.api.Test;
 
-public class PathTest {
+class PathTest {
 
     @Test
-    public void relativizeで相対パスを得られる() throws Exception {
-        final Path a = Paths.get("opt", "foo", "bar", "baz");
-        final Path b = Paths.get("opt", "foo");
+    void relativizeで相対パスを得られる() throws Exception {
+        final Path a = Path.of("opt", "foo", "bar", "baz");
+        final Path b = Path.of("opt", "foo");
         final Path c = b.relativize(a);
-        assertEquals(Paths.get("bar", "baz"), c);
+        assertEquals(Path.of("bar", "baz"), c);
     }
 }
